# Dcc_lib

./: CMakeLists.txt  CMakelists.txt  Config.cmake  Test.c  cgo.bat  config.cmake  dcc_IkLegs.c  dcc_IkLegs.h  ggg.bat  go.bat  setenv.bat  test.cpp
Base/: dcc_Ik.c  dcc_con_base.c  dcc_con_base.h
Dcc_lib/: BaseHeaders.h  DBase.hpp  DFuzzy.hpp  DMat.hpp
Dcc_lib/Base/: dcc_Ik.h  dcc_Math.c  dcc_Math.h  dcc_con_base.c  dcc_con_base.h
Dcc_lib_oldbk/Base/: dcc_Mat.c  dcc_Mat.h  dcc_con_base.c
include/: BaseHeaders.h  DBase.hpp  DDefs.hpp  DFuzzy.hpp  DMat.hpp
src/: DDefs.cpp
